# sofia

./: README.md  pyproject.toml  requirements.txt  run.py  run_kickstarter.sh  sofia.py
data/: __init__.py
