[tool.poetry]
name = "sofia"
version = "0.1.0"
description = ""
authors = ["Satoshi <33173348+NotWhiteButHundred@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"
tensorly = "^0.9.0"
scipy = "^1.15.2"
joblib = "^1.4.2"
narwhals = "^1.35.0"
numba = "^0.61.2"
plotly = "^6.0.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
sparse = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
